[project]
name = "pooch"
description = "A friend to fetch your data files"
dynamic = ["version"]
authors = [
  {name="The Pooch Developers", email="fatiandoaterra@protonmail.com"},
]
maintainers = [
  {name = "Leonardo Uieda", email = "leo@uieda.com"}
]
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = ["data", "download", "caching", "http"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "platformdirs >= 2.5.0",
    "packaging >= 20.0",
    "requests >= 2.19.0",
]

[project.optional-dependencies]
progress = ["tqdm>=4.41.0,<5.0.0"]
sftp = ["paramiko>=2.7.0"]
xxhash = ["xxhash>=1.4.3"]

[project.urls]
"Documentation" = "https://www.fatiando.org/pooch"
"Changelog" = "https://www.fatiando.org/pooch/latest/changes.html"
"Bug Tracker" = "https://github.com/fatiando/pooch/issues"
"Source Code" = "https://github.com/fatiando/pooch"

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

[tool.setuptools.package-data]
"pooch.tests.data" = ["*.txt", "*.zip", "*.gz", "*.xz", "*.bz2"]
"pooch.tests.data.store" = ["*.txt"]
"pooch.tests.data.store.subdir" = ["*.txt"]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme =  "post-release"
local_scheme =  "node-and-date"
write_to =  "pooch/_version.py"

[tool.pytest.ini_options]
markers = [
    "network: test requires network access",
]

[tool.burocrata]
notice = '''
# Copyright (c) 2018 The Pooch Developers.
# Distributed under the terms of the BSD 3-Clause License.
# SPDX-License-Identifier: BSD-3-Clause
#
# This code is part of the Fatiando a Terra project (https://www.fatiando.org)
#'''

[tool.ruff]
line-length = 88
exclude = [
    "doc/_build",
    "pooch/_version.py",
]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "FURB",     # refurb
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "PYI",      # flake8-pyi
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
    "UP015",    # ignore redundant modes in `open` (it's ok to be explicit)
    "ISC001",   # Conflicts with formatter
    "PLR09",    # Too many <...>
    "PLR2004",  # Magic value used in comparison
    "PT001",    # conventions for parenthesis on pytest.fixture
    "RET504",   # unnecessary assignment: allow to assign and return
]

[tool.ruff.lint.per-file-ignores]
# disable unused-imports errors on __init__.py
"__init__.py" = ["F401"]
# allow print statements in tests
"pooch/tests/**" = ["T20"]
