[project]
name = "pooch"
description = "A friend to fetch your data files"
dynamic = ["version"]
authors = [
  {name="The Pooch Developers", email="fatiandoaterra@protonmail.com"},
]
maintainers = [
  {name = "Leonardo Uieda", email = "leo@uieda.com"}
]
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["data", "download", "caching", "http"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.9"
dependencies = [
    "platformdirs >= 2.5.0",
    "packaging >= 20.0",
    "requests >= 2.19.0",
]

[project.optional-dependencies]
progress = ["tqdm>=4.41.0,<5.0.0"]
sftp = ["paramiko>=2.7.0"]
xxhash = ["xxhash>=1.4.3"]
test = ["pytest-httpserver", "pytest-localftpserver"]

[project.urls]
"Documentation" = "https://www.fatiando.org/pooch"
"Changelog" = "https://www.fatiando.org/pooch/latest/changes.html"
"Bug Tracker" = "https://github.com/fatiando/pooch/issues"
"Source Code" = "https://github.com/fatiando/pooch"

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

[tool.setuptools.package-data]
"pooch.tests.data" = ["*.txt", "*.zip", "*.gz", "*.xz", "*.bz2"]
"pooch.tests.data.store" = ["*.txt"]
"pooch.tests.data.store.subdir" = ["*.txt"]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme =  "post-release"
local_scheme =  "node-and-date"
write_to =  "pooch/_version.py"

[tool.pytest.ini_options]
markers = [
    "network: test requires network access",
    "figshare: test make request to Figshare",
]

[tool.burocrata]
notice = '''
# Copyright (c) 2018 The Pooch Developers.
# Distributed under the terms of the BSD 3-Clause License.
# SPDX-License-Identifier: BSD-3-Clause
#
# This code is part of the Fatiando a Terra project (https://www.fatiando.org)
#'''
