[metadata]
name = pooch
fullname = Pooch
description = "Pooch manages your Python library's sample data files: it automatically downloads and stores them in a local directory, with support for versioning and corruption checks."
long_description = file: README.md
long_description_content_type = text/markdown
author = The Pooch Developers
author_email = fatiandoaterra@protonmail.com
maintainer = "Leonardo Uieda"
maintainer_email = leouieda@gmail.com
license = BSD 3-Clause License
license_file = LICENSE.txt
platform = any
keywords = data, download, caching, http
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
url = https://github.com/fatiando/pooch
project_urls =
    Documentation = https://www.fatiando.org/pooch
    Release Notes = https://github.com/fatiando/pooch/releases
    Bug Tracker = https://github.com/fatiando/pooch/issues
    Source Code = https://github.com/fatiando/pooch

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.7
setup_requires =
install_requires =
    platformdirs>=2.5.0
    packaging>=20.0
    requests>=2.19.0

[options.extras_require]
progress =
    tqdm>=4.41.0,<5.0.0
sftp =
    paramiko>=2.7.0
xxhash =
    xxhash>=1.4.3

[options.package_data]
pooch.tests = data/*, data/store/*, data/store/subdir/*

[flake8]
ignore = E203, E266, E501, W503, F401, E741
max-line-length = 88
max-doc-length = 79
